--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=url-shortener
+server.port=8090
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/tinyurldb?autoReconnect=true&failOverReadOnly=false&maxReconnects=10&useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=password
+#spring.h2.console.enabled=true
